<?xml version="1.0"?>
<package>
  <name>sphand_driver</name>
  <version>0.0.0</version>
  <description>The sphand_driver package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pazeshun@todo.todo">pazeshun</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>force_proximity_ros</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>libmraa1</build_depend>
  <build_depend>libmraa-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mraa-tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sphand_driver_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>vl53l0x_mraa_ros</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>force_proximity_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>jsk_arc2017_baxter</run_depend>
  <run_depend>libmraa1</run_depend>
  <run_depend>libmraa-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>mraa-tools</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sphand_driver_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>vl53l0x_mraa_ros</run_depend>

  <export>
  </export>
</package>
