<?xml version="1.0"?>
<package format="2">
  <name>sphand_driver_msgs</name>
  <version>0.0.1</version>
  <description>ROS messages for sphand_driver</description>

  <maintainer email="pazeshun3684@gmail.com">Shun Hasegawa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>force_proximity_ros</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
