<?xml version="1.0"?>
<package format="2">
  <name>vl53l0x_mraa_ros</name>
  <version>0.0.1</version>
  <description>The vl53l0x_mraa_ros package</description>

  <maintainer email="pazeshun3684@gmail.com">Shun Hasegawa</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
